# sfota

./: Cargo.toml  LICENSE  README.md
src/: code_generator.rs  lib.rs  parser.rs
src/code_generator/: lookup_tables.rs  mod.rs
src/parser/: mod.rs  operand_expression.rs
src/parser/instruction/: mnemonic.rs  mod.rs  operand.rs
