[package]
name = "sfota"
version = "0.1.0"
authors = ["Tim Evers <29369097+TVerse@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.0"
strum = "0.19.5"
strum_macros = "0.19.4"
thiserror = "1.0.22"
